DevEnv.java corrections for current Java version